--- a/styles/global.css
+++ b/styles/global.css
@@ -5,16 +5,25 @@
 }
 
 :root {
+  /* Colors */
   --brand-color: #EF5F4C;
   --background-color: #FFF;
   --surface-color: #F5F5F5;
   --skeleton-color: #D9D9D9;
   --shape-transparency: #FFFFFF8F;
   --text-color-primary: #313131;
-  --text-color-secondary: #6C6C6C; 
+  --text-color-secondary: #6C6C6C;
+
+  /* Typography */
+  --font-family: "Poppins", sans-serif;
+  --text-lg: bold 32px/125% var(--font-family);
+  --text: 16px/1.5 var(--font-family);
+  --text-md: 14px/170% var(--font-family);
+  --text-sm: 12px/170% var(--font-family);
 }
 
 body {
   color: var(--text-color-secondary);
   background-color: var(--background-color);
+  font: var(--text);
 }
